--- a/en/index.html
+++ b/en/index.html
@@ -643,7 +643,7 @@
 							</div>
 
 							<p class="text-sm shift-r--180">
-								Tokens of the VIARIUM platform are issued in accordance with the standard ERC 20 on the Ethereum blockchain. Emissions are limited, issue of new tokens upon completion of  placement is not provided.
+								Tokens of the VIARIUM platform are issued in accordance with the standard ERC 20 on the Ethereum blockchain.
 							</p>
 
 						</div>
@@ -765,7 +765,7 @@
 								<img src="/en/img/coins.png" alt="" class="img-responsive mb-4">
 
 								<p class="text-sm">
-									Tokens of the VIARIUM platform are issued in accordance with the standard ERC 20 on the Ethereum blockchain. Emissions are limited, issue of new tokens upon completion of  placement is not provided.
+									Tokens of the VIARIUM platform are issued in accordance with the standard ERC 20 on the Ethereum blockchain.
 								</p>
 							</div>
 
