--- a/ja/index.html
+++ b/ja/index.html
@@ -643,7 +643,7 @@
 							</div>
 
 							<p class="text-sm shift-r--180">
-								VIARIUMプラットフォームのトークンは、EthereumblockchainでERC20標準に従って製造されています。発行量には限界があり、配置完了後、新しいトークンの発行は計画されません。
+								VIARIUMプラットフォームのトークンは、EthereumblockchainでERC20標準に従って製造されています
 							</p>
 
 						</div>
@@ -765,7 +765,7 @@
 								<img src="/en/img/coins.png" alt="" class="img-responsive mb-4">
 
 								<p class="text-sm">
-									VIARIUMプラットフォームのトークンは、EthereumblockchainでERC20標準に従って製造されています。発行量には限界があり、配置完了後、新しいトークンの発行は計画されません。
+									VIARIUMプラットフォームのトークンは、EthereumblockchainでERC20標準に従って製造されています
 								</p>
 							</div>
 
@@ -1491,7 +1491,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">マシュケフ</div>
+                                            <div class="member-name">Aleksey Mashkeev</div>
                                             <div class="member-position">CEO</div>
                                             <div class="member-text">2006年から3D視覚化の専門家で、建設業、インテリアデザイン、仕上げ材の販売、ITなど、さまざまな分野のいくつかの企業を組織しました。 VRエバンジェリスト。</div>
                                         </div>
@@ -1512,7 +1512,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">ラジン</div>
+                                            <div class="member-name">Igor Razin</div>
                                             <div class="member-position">CTO</div>
                                             <div class="member-text">マルチユーザインタラクションの開発、Unityプラットフォーム上でのシーン作成。2014年以来VR開発に従事しています。世界のマルチプレイヤークエストの最初のクリエイターの1人。</div>
                                         </div>
@@ -1533,7 +1533,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">シマノフスキー</div>
+                                            <div class="member-name">Sergey Simanovskiy</div>
                                             <div class="member-position">Blockchain consultant</div>
                                             <div class="member-text">成功したICOの実施を含む、6年以上にわたるblockchainプロジェクトでの実務経験。Golos基金プロジェクトのリーダーとインスピレーター。（Golosプロジェクトのグループ管理とblockchainにおけるベンチャー投資）。</div>
                                         </div>
@@ -1554,7 +1554,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">コルワノワ</div>
+                                            <div class="member-name">Dar'ja Kolivanova</div>
                                             <div class="member-position">PM</div>
                                             <div class="member-text">金融セクターおよびIT技術に 於けるプロジェクト管理。ゼロから市場に出すまでのプロジェクト実施。来年が我生活の中でVR / ARを根絶する鍵となると信じています。</div>
                                         </div>
@@ -1575,7 +1575,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">グりナラ</div>
+                                            <div class="member-name">Gulnara Galeeva</div>
                                             <div class="member-position">Marketing Director</div>
                                             <div class="member-text">マーケティングとPRでの15年間の経験。ATL、BTL、PR、Eventでの経験。デジタルマーケティングの専門家。主なプロジェクトの中にはCitroen, REN TV, Europa plus, Otto group Russia, Osterreichischen Lotterien und Casinos。</div>
                                         </div>
@@ -1596,7 +1596,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">ザカロフ</div>
+                                            <div class="member-name">Dmitry Zaharov</div>
                                             <div class="member-position">3D graphic designer</div>
                                             <div class="member-text">3Dデザイナー/モデラー、CGプロジェクト管理、ビジュアルコンテンツの作成、建築物のプロフェッショナルな写真、空中写真。</div>
                                         </div>
@@ -1625,7 +1625,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">クフシンキコフ</div>
+                                            <div class="member-name">Ivan Kuvshinnikov</div>
                                             <div class="member-position">Sound designer</div>
                                             <div class="member-text">テレビやメディアの分野に於ける経験。インタラクティブオーディオの開発者団体の団体員。VR / ARの生産において健全なデザインは、重要な役割を果たすと考えている。</div>
                                         </div>
@@ -1646,7 +1646,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">クライニー</div>
+                                            <div class="member-name">Sergey Krainiy</div>
                                             <div class="member-position">VR Engineer</div>
                                             <div class="member-text">シーンのアキテクチャー。GameDevでの10年間以上。saber3d.comでTeamLeaderとしてメインプロジェクトの担当。</div>
                                         </div>
@@ -1667,7 +1667,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">ヤコブレンコワ</div>
+                                            <div class="member-name">Ekaterina Yakovlenkova</div>
                                             <div class="member-position">Backoffice Manager</div>
                                             <div class="member-text">BBDO、SODA広告会社で、PRマネージャーの経験。2017年、情報ポータルCoinfoxチームに加わりました。</div>
                                         </div>
@@ -1685,7 +1685,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">ツァリョフ</div>
+                                            <div class="member-name">Pavel Zharev</div>
                                             <div class="member-position">VR Developer</div>
                                             <div class="member-text">グラフィックデザイナーであり、グラフィックスの専門家でもあります。最大の国際企業やインディーズ部門で15年のコンピュータゲーム開発経験を持っています。</div>
                                         </div>
@@ -1706,7 +1706,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">コロリ</div>
+                                            <div class="member-name">Vsevolod Korol</div>
                                             <div class="member-position">Analyst</div>
                                             <div class="member-text">市場における分散型交換所の分析、BTC / ETH / grapheneの交換方法。Autotraderの下での開発のためのBitsharesのClientの分析。その結果、外部登録キーを使用して分散型交換所を実施するチームが集まりました。航空機の飛行プロファイルをゼロから作業バージョンまで計算する自動システムの開発に従事していました。</div>
                                         </div>
@@ -1724,7 +1724,7 @@
                                                                                                                     </a>
                                                                                                     </div>
                                             </div>
-                                            <div class="member-name">マース</div>
+                                            <div class="member-name">Artur Mass</div>
                                             <div class="member-position">Head of Community</div>
                                             <div class="member-text">様々な分野の国際社会との10年以上の成功を収めて、CappasityやCashbetなどのプロジェクトに参加しました。</div>
                                         </div>
@@ -1781,7 +1781,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">マシュケフ</div>
+                                    <div class="member-name">Aleksey Mashkeev</div>
                                     <div class="member-position">CEO</div>
                                     <div class="member-text">2006年から3D視覚化の専門家で、建設業、インテリアデザイン、仕上げ材の販売、ITなど、さまざまな分野のいくつかの企業を組織しました。 VRエバンジェリスト。</div>
                                 </div>
@@ -1802,7 +1802,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">ラジン</div>
+                                    <div class="member-name">Igor Razin</div>
                                     <div class="member-position">CTO</div>
                                     <div class="member-text">マルチユーザインタラクションの開発、Unityプラットフォーム上でのシーン作成。2014年以来VR開発に従事しています。世界のマルチプレイヤークエストの最初のクリエイターの1人。</div>
                                 </div>
@@ -1823,7 +1823,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">シマノフスキー</div>
+                                    <div class="member-name">Sergey Simanovskiy</div>
                                     <div class="member-position">Blockchain consultant</div>
                                     <div class="member-text">成功したICOの実施を含む、6年以上にわたるblockchainプロジェクトでの実務経験。Golos基金プロジェクトのリーダーとインスピレーター。（Golosプロジェクトのグループ管理とblockchainにおけるベンチャー投資）。</div>
                                 </div>
@@ -1844,7 +1844,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">コルワノワ</div>
+                                    <div class="member-name">Dar'ja Kolivanova</div>
                                     <div class="member-position">PM</div>
                                     <div class="member-text">金融セクターおよびIT技術に 於けるプロジェクト管理。ゼロから市場に出すまでのプロジェクト実施。来年が我生活の中でVR / ARを根絶する鍵となると信じています。</div>
                                 </div>
@@ -1865,7 +1865,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">グりナラ</div>
+                                    <div class="member-name">Gulnara Galeeva</div>
                                     <div class="member-position">Marketing Director</div>
                                     <div class="member-text">マーケティングとPRでの15年間の経験。ATL、BTL、PR、Eventでの経験。デジタルマーケティングの専門家。主なプロジェクトの中にはCitroen, REN TV, Europa plus, Otto group Russia, Osterreichischen Lotterien und Casinos。</div>
                                 </div>
@@ -1886,7 +1886,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">ザカロフ</div>
+                                    <div class="member-name">Dmitry Zaharov</div>
                                     <div class="member-position">3D graphic designer</div>
                                     <div class="member-text">3Dデザイナー/モデラー、CGプロジェクト管理、ビジュアルコンテンツの作成、建築物のプロフェッショナルな写真、空中写真。</div>
                                 </div>
@@ -1907,7 +1907,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">クフシンキコフ</div>
+                                    <div class="member-name">Ivan Kuvshinnikov</div>
                                     <div class="member-position">Sound designer</div>
                                     <div class="member-text">テレビやメディアの分野に於ける経験。インタラクティブオーディオの開発者団体の団体員。VR / ARの生産において健全なデザインは、重要な役割を果たすと考えている。</div>
                                 </div>
@@ -1928,7 +1928,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">クライニー</div>
+                                    <div class="member-name">Sergey Krainiy</div>
                                     <div class="member-position">VR Engineer</div>
                                     <div class="member-text">シーンのアキテクチャー。GameDevでの10年間以上。saber3d.comでTeamLeaderとしてメインプロジェクトの担当。</div>
                                 </div>
@@ -1949,7 +1949,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">ヤコブレンコワ</div>
+                                    <div class="member-name">Ekaterina Yakovlenkova</div>
                                     <div class="member-position">Backoffice Manager</div>
                                     <div class="member-text">BBDO、SODA広告会社で、PRマネージャーの経験。2017年、情報ポータルCoinfoxチームに加わりました。</div>
                                 </div>
@@ -1967,7 +1967,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">ツァリョフ</div>
+                                    <div class="member-name">Pavel Zharev</div>
                                     <div class="member-position">VR Developer</div>
                                     <div class="member-text">グラフィックデザイナーであり、グラフィックスの専門家でもあります。最大の国際企業やインディーズ部門で15年のコンピュータゲーム開発経験を持っています。</div>
                                 </div>
@@ -1988,7 +1988,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">コロリ</div>
+                                    <div class="member-name">Vsevolod Korol</div>
                                     <div class="member-position">Analyst</div>
                                     <div class="member-text">市場における分散型交換所の分析、BTC / ETH / grapheneの交換方法。Autotraderの下での開発のためのBitsharesのClientの分析。その結果、外部登録キーを使用して分散型交換所を実施するチームが集まりました。航空機の飛行プロファイルをゼロから作業バージョンまで計算する自動システムの開発に従事していました。</div>
                                 </div>
@@ -2006,7 +2006,7 @@
                                                                                                     </a>
                                                                                     </div>
                                     </div>
-                                    <div class="member-name">マース</div>
+                                    <div class="member-name">Artur Mass</div>
                                     <div class="member-position">Head of Community</div>
                                     <div class="member-text">様々な分野の国際社会との10年以上の成功を収めて、CappasityやCashbetなどのプロジェクトに参加しました。</div>
                                 </div>
