--- a/ko/index.html
+++ b/ko/index.html
@@ -643,7 +643,7 @@
 							</div>
 
 							<p class="text-sm shift-r--180">
-								VIARIUM 플랫폼 토큰은 이더리움(Ethereum) 블록체인 기반 ERC20 기준으로 발행됩니다. 발행 수량은 제한적이며, 기존 발행된 수량이 전량 거래된 이후 신규 토큰의 추가발행은 없습니다.
+								VIARIUM 플랫폼 토큰은 이더리움(Ethereum) 블록체인 기반 ERC20 기준으로 발행됩니다.
 							</p>
 
 						</div>
@@ -765,7 +765,7 @@
 								<img src="/en/img/coins.png" alt="" class="img-responsive mb-4">
 
 								<p class="text-sm">
-									VIARIUM 플랫폼 토큰은 이더리움(Ethereum) 블록체인 기반 ERC20 기준으로 발행됩니다. 발행 수량은 제한적이며, 기존 발행된 수량이 전량 거래된 이후 신규 토큰의 추가발행은 없습니다.
+									VIARIUM 플랫폼 토큰은 이더리움(Ethereum) 블록체인 기반 ERC20 기준으로 발행됩니다.
 								</p>
 							</div>
 
