--- a/ru/index.html
+++ b/ru/index.html
@@ -641,7 +641,7 @@
 							</div>
 
 							<p class="text-sm shift-r--180">
-								Токены платформы VIARIUM выпускаются  по стандарту <br>ERC20 на блокчейне Ethereum. Объем эмиссии ограничен, <br>выпуск новых токенов по завершению размещения не предусмотрен.
+								Токены платформы VIARIUM выпускаются  по стандарту <br>ERC20 на блокчейне Ethereum.
 							</p>
 
 						</div>
@@ -763,7 +763,7 @@
 								<img src="/en/img/coins.png" alt="" class="img-responsive mb-4">
 
 								<p class="text-sm">
-									Токены платформы VIARIUM выпускаются  по стандарту <br>ERC20 на блокчейне Ethereum. Объем эмиссии ограничен, <br>выпуск новых токенов по завершению размещения не предусмотрен.
+									Токены платформы VIARIUM выпускаются  по стандарту <br>ERC20 на блокчейне Ethereum.
 								</p>
 							</div>
 
