--- a/ja/team.html
+++ b/ja/team.html
@@ -305,7 +305,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">マシュケフ</div>
+                            <div class="member-name">Aleksey Mashkeev</div>
                             <div class="member-position">CEO</div>
                             <div class="member-text">2006年から3D視覚化の専門家で、建設業、インテリアデザイン、仕上げ材の販売、ITなど、さまざまな分野のいくつかの企業を組織しました。 VRエバンジェリスト。</div>
                         </div>
@@ -328,7 +328,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">ラジン</div>
+                            <div class="member-name">Igor Razin</div>
                             <div class="member-position">CTO</div>
                             <div class="member-text">マルチユーザインタラクションの開発、Unityプラットフォーム上でのシーン作成。2014年以来VR開発に従事しています。世界のマルチプレイヤークエストの最初のクリエイターの1人。</div>
                         </div>
@@ -351,7 +351,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">シマノフスキー</div>
+                            <div class="member-name">Sergey Simanovskiy</div>
                             <div class="member-position">Blockchain consultant</div>
                             <div class="member-text">成功したICOの実施を含む、6年以上にわたるblockchainプロジェクトでの実務経験。Golos基金プロジェクトのリーダーとインスピレーター。（Golosプロジェクトのグループ管理とblockchainにおけるベンチャー投資）。</div>
                         </div>
@@ -374,7 +374,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">コルワノワ</div>
+                            <div class="member-name">Dar'ja Kolivanova</div>
                             <div class="member-position">PM</div>
                             <div class="member-text">金融セクターおよびIT技術に 於けるプロジェクト管理。ゼロから市場に出すまでのプロジェクト実施。来年が我生活の中でVR / ARを根絶する鍵となると信じています。</div>
                         </div>
@@ -397,7 +397,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">グりナラ</div>
+                            <div class="member-name">Gulnara Galeeva</div>
                             <div class="member-position">Marketing Director</div>
                             <div class="member-text">マーケティングとPRでの15年間の経験。ATL、BTL、PR、Eventでの経験。デジタルマーケティングの専門家。主なプロジェクトの中にはCitroen, REN TV, Europa plus, Otto group Russia, Osterreichischen Lotterien und Casinos。</div>
                         </div>
@@ -420,7 +420,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">ザカロフ</div>
+                            <div class="member-name">Dmitry Zaharov</div>
                             <div class="member-position">3D graphic designer</div>
                             <div class="member-text">3Dデザイナー/モデラー、CGプロジェクト管理、ビジュアルコンテンツの作成、建築物のプロフェッショナルな写真、空中写真。</div>
                         </div>
@@ -443,7 +443,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">クフシンキコフ</div>
+                            <div class="member-name">Ivan Kuvshinnikov</div>
                             <div class="member-position">Sound designer</div>
                             <div class="member-text">テレビやメディアの分野に於ける経験。インタラクティブオーディオの開発者団体の団体員。VR / ARの生産において健全なデザインは、重要な役割を果たすと考えている。</div>
                         </div>
@@ -466,7 +466,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">クライニー</div>
+                            <div class="member-name">Sergey Krainiy</div>
                             <div class="member-position">VR Engineer</div>
                             <div class="member-text">シーンのアキテクチャー。GameDevでの10年間以上。saber3d.comでTeamLeaderとしてメインプロジェクトの担当。</div>
                         </div>
@@ -489,7 +489,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">ヤコブレンコワ</div>
+                            <div class="member-name">Ekaterina Yakovlenkova</div>
                             <div class="member-position">Backoffice Manager</div>
                             <div class="member-text">BBDO、SODA広告会社で、PRマネージャーの経験。2017年、情報ポータルCoinfoxチームに加わりました。</div>
                         </div>
@@ -509,7 +509,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">ツァリョフ</div>
+                            <div class="member-name">Pavel Zharev</div>
                             <div class="member-position">VR Developer</div>
                             <div class="member-text">グラフィックデザイナーであり、グラフィックスの専門家でもあります。最大の国際企業やインディーズ部門で15年のコンピュータゲーム開発経験を持っています。</div>
                         </div>
@@ -532,7 +532,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">コロリ</div>
+                            <div class="member-name">Vsevolod Korol</div>
                             <div class="member-position">Analyst</div>
                             <div class="member-text">市場における分散型交換所の分析、BTC / ETH / grapheneの交換方法。Autotraderの下での開発のためのBitsharesのClientの分析。その結果、外部登録キーを使用して分散型交換所を実施するチームが集まりました。航空機の飛行プロファイルをゼロから作業バージョンまで計算する自動システムの開発に従事していました。</div>
                         </div>
@@ -552,7 +552,7 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">マース</div>
+                            <div class="member-name">Artur Mass</div>
                             <div class="member-position">Head of Community</div>
                             <div class="member-text">様々な分野の国際社会との10年以上の成功を収めて、CappasityやCashbetなどのプロジェクトに参加しました。</div>
                         </div>
