--- a/ru/index.html
+++ b/ru/index.html
@@ -418,9 +418,14 @@
 
 </header>
 
+		
+		<section class="section section-video">
 
+
+    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hbuU0j75o7c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</section>
 		<div class="section section-rounded " id="WorkCases">
-	<div class="section-round section-round-full section-what-is-viarium"></div>
+	<div class="section-round section-round-bottom section-what-is-viarium"></div>
 
 	<div class="hex hex-7 d-block d-lg-none"></div>
 
