video section update

--- a/ru/index.html
+++ b/ru/index.html
@@ -420,11 +420,18 @@
 
 		
 		<section class="section section-video">
+    
+    <div class="video-poster">
+        <a href="" data-video="https://www.youtube.com/embed/hbuU0j75o7c?autoplay=1&rel=0&controls=0&start=0" data-target="mainVideo" class="video-play">
+            <img src="/en/img/play-btn.png" alt="" class="video-play--btn">
+        </a>
 
+        <iframe width="100%" height="100%" src="" class="iframe iframe-mainVideo" id="mainVideo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
 
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hbuU0j75o7c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    
 </section>
-		<div class="section section-rounded " id="WorkCases">
+		<div class="section section-rounded mt-0" id="WorkCases">
 	<div class="section-round section-round-bottom section-what-is-viarium"></div>
 
 	<div class="hex hex-7 d-block d-lg-none"></div>
