--- a/cn/index.html
+++ b/cn/index.html
@@ -436,7 +436,7 @@
 		<div class="section section-rounded mt-0" id="WorkCases">
 	<div class="section-round section-round-bottom section-what-is-viarium"></div>
 
-	<div class="hex hex-7 d-block d-lg-none"></div>
+	<!-- <div class="hex hex-7 d-block d-lg-none"></div> -->
 
 	<div class="container">
 		<div class="section-content" id="AboutTitle">
