--- a/ko/index.html
+++ b/ko/index.html
@@ -423,12 +423,18 @@
 		
 		<section class="section section-video">
     
-    <div class="video-poster">
+    <div class="video-poster d-none d-sm-block">
         <a href="" data-video="https://www.youtube.com/embed/hbuU0j75o7c?autoplay=1&rel=0&controls=0&start=0" data-target="mainVideo" class="video-play">
             <img src="/en/img/play-btn.png" alt="" class="video-play--btn">
         </a>
 
         <iframe width="100%" height="100%" src="" class="iframe iframe-mainVideo" id="mainVideo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+
+    <div class="video-poster d-block d-sm-none">
+
+
+        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/hbuU0j75o7c?autoplay=1&rel=0&controls=0&start=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
     </div>
 
     
