--- a/ru/index.html
+++ b/ru/index.html
@@ -286,7 +286,7 @@
     </div>
 </nav>		<header class="header text-center text-lg-left">
 
-	<!-- <div id="particles-js" class="particles"></div> -->
+	<!-- <div id="particles-js" class="particles"></div> 1-->
 
 	<div class="container">
 
