--- a/ja/team.html
+++ b/ja/team.html
@@ -303,6 +303,9 @@
                                                                             <a class="social-1" href="https://www.facebook.com/profile.php?id=100001589026977">
                                                                                             <img src="/en/img/icons/facebook.png">
                                                                                     </a>
+                                                                            <a class="social-2" href="https://www.linkedin.com/in/%D0%B0%D0%BB%D0%B5%D0%BA%D1%81%D0%B5%D0%B9-%D0%BC%D0%B0%D1%88%D0%BA%D0%B5%D0%B5%D0%B2-a8309580">
+                                                                                            <img src="/en/img/icons/linkedin.png">
+                                                                                    </a>
                                                                     </div>
                             </div>
                             <div class="member-name">Aleksey Mashkeev</div>
