--- a/cn/team.html
+++ b/cn/team.html
@@ -377,8 +377,8 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">Darya Kolivanova</div>
-                            <div class="member-position">PM</div>
+                            <div class="member-name">Darya Kolyvanova</div>
+                            <div class="member-position">Project Manager</div>
                             <div class="member-text">管理金融部门和IT技术项目。项目实现了从零到在市场上推出产品。他认为，最近几年将是VR/AR扎根到我们的生活中的最为关键的几年。</div>
                         </div>
                     </div>
