--- a/en/team.html
+++ b/en/team.html
@@ -377,8 +377,8 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">Darya Kolivanova</div>
-                            <div class="member-position">PM</div>
+                            <div class="member-name">Darya Kolyvanova</div>
+                            <div class="member-position">Project Manager</div>
                             <div class="member-text">Project management in the financial sector and IT-technology. Implementation of projects from scratch to introduction of products to the market. Believes that the next few years will be criticlal for introducing the VR/AR into our lives.</div>
                         </div>
                     </div>
