--- a/ja/team.html
+++ b/ja/team.html
@@ -377,8 +377,8 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">Darya Kolivanova</div>
-                            <div class="member-position">PM</div>
+                            <div class="member-name">Darya Kolyvanova</div>
+                            <div class="member-position">Project Manager</div>
                             <div class="member-text">金融セクターおよびIT技術に 於けるプロジェクト管理。ゼロから市場に出すまでのプロジェクト実施。来年が我生活の中でVR / ARを根絶する鍵となると信じています。</div>
                         </div>
                     </div>
