--- a/ko/team.html
+++ b/ko/team.html
@@ -377,8 +377,8 @@
                                                                                     </a>
                                                                     </div>
                             </div>
-                            <div class="member-name">Darya Kolivanova</div>
-                            <div class="member-position">PM</div>
+                            <div class="member-name">Darya Kolyvanova</div>
+                            <div class="member-position">Project Manager</div>
                             <div class="member-text">금융 분야 및 IT 기술 관련 프로젝트를 관리하고 있다. 처음 프로젝트 설계부터 시장에 제품 출시까지 업무를 담당한다. VR/AR이 우리 삶에 정착되기 위해선 앞으로의 몇 년이 중요할 것이라 생각한다.</div>
                         </div>
                     </div>
