--- a/en/index.html
+++ b/en/index.html
@@ -344,7 +344,7 @@
 						</div>
 					</div>
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-default btn-fluid btn-buy">BUY TOKEN</a>
+						<a href="/users/sign_up" class="btn btn-default btn-fluid">BUY TOKEN</a>
 					</div>
 
 				</div>
