--- a/ru/index.html
+++ b/ru/index.html
@@ -342,7 +342,7 @@
 						</div>
 					</div>
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-default btn-fluid btn-buy">КУПИТЬ ТОКЕНЫ</a>
+						<a href="/users/sign_up" class="btn btn-default btn-fluid">КУПИТЬ ТОКЕНЫ</a>
 					</div>
 
 				</div>
