--- a/en/docs.html
+++ b/en/docs.html
@@ -292,10 +292,10 @@
 </nav>        <div class="section-rounded section-middle--first">
     <div class="section-round section-round-bottom section-team-bg"></div>
     
-    <div class="section-content text-center">
+    <div class="section-content text-center section-docs">
         <div class="container">
             <div class="title-xl mb-5 pb-4" id="DocsTitle"><span class="mark">Documents</span></div>
-            <div class="row justify-content-center">
+            <div class="docs-wrap docSlider--mobile">
                 <div class="doc-item">
                     <a href="https://s3.eu-west-2.amazonaws.com/viarium/VR_WP_ENG.pdf" target="_blank" class="doc-link">
                         <img src="/en/img/docs/VR_WP_ENG-1.jpg" alt="">
