--- a/ru/docs.html
+++ b/ru/docs.html
@@ -310,7 +310,7 @@
                     <a href="https://s3.eu-west-2.amazonaws.com/viarium/VR_PR_funds_ru_1.pdf" target="_blank" class="doc-link">
                         <img src="/en/img/docs/VR_WP_ENG-1.jpg" alt="">
                     </a>
-                    <p class="doc-title">Presentation</p>
+                    <p class="doc-title">Презентация</p>
                 </div>        
             </div>
         </div>
