--- a/ja/index.html
+++ b/ja/index.html
@@ -847,7 +847,7 @@
 
                 </div>
                 <div class="col-lg-6 col-7 text-right">
-                    <img src="/en/img/diagram_1.svg" alt="" class="img-responsive w-100 mb-3">
+                    <img src="/en/img/diagram_1-new.svg" alt="" class="img-responsive w-100 mb-3">
                 </div>
             </div>
         </div>
