--- a/cn/index.html
+++ b/cn/index.html
@@ -428,12 +428,12 @@
 		<section class="section section-video">
 
     <div class="video-poster">
-        <a href="" data-video="https://www.youtube.com/embed/hbuU0j75o7c?autoplay=1&rel=0&controls=0&start=0" data-target="mainVideo" class="video-play">
+        <a href="" data-target="mainVideo" class="video-play">
             <img src="/en/img/play-btn.png" alt="" class="video-play--btn">
         </a>
 
-        <div class="iframe iframe-mainVideo" id="mainVideo"></div>
-    </div>
+                	<iframe src="//rutube.ru/play/embed/11278965" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowfullscreen  class="iframe iframe-mainVideo" id="mainVideo" frameborder="0" width="100%" height="100%"></iframe>
+            </div>
     
 </section>
 		<div class="section section-rounded mt-0" id="WorkCases">
