--- a/ru/index.html
+++ b/ru/index.html
@@ -426,12 +426,12 @@
 		<section class="section section-video">
 
     <div class="video-poster">
-        <a href="" data-video="https://www.youtube.com/embed/hbuU0j75o7c?autoplay=1&rel=0&controls=0&start=0" data-target="mainVideo" class="video-play">
+        <a href="" data-target="mainVideo" class="video-play">
             <img src="/en/img/play-btn.png" alt="" class="video-play--btn">
         </a>
 
-        <div class="iframe iframe-mainVideo" id="mainVideo"></div>
-    </div>
+                	<div class="iframe iframe-mainVideo" id="mainVideo"></div>
+            </div>
     
 </section>
 		<div class="section section-rounded mt-0" id="WorkCases">
