--- a/cn/index.html
+++ b/cn/index.html
@@ -1431,8 +1431,9 @@
                         观看我们频道的新闻和事件
                     </p>
                     <div class="btn-group mb-5 w-100">
-                        <a href="https://www.youtube.com/channel/UCb9jj2H9Rl3IhK1YVNaSHEg?view_as=subscriber" class="btn btn-default btn-fluid">Youtube</a>
-                        <a href="https://medium.com/viarium" class="btn btn-default btn-fluid">Medium</a>
+
+                                                    <a href="https://rutube.ru/video/person/2856139/" class="btn btn-default btn-fluid">Rutube</a>
+                                                <a href="https://medium.com/viarium" class="btn btn-default btn-fluid">Medium</a>
                     </div>
 
                 </div>
