--- a/ko/team.html
+++ b/ko/team.html
@@ -340,7 +340,7 @@
                             </div>
                             <div class="member-name">Matt Coleman</div>
                             <div class="member-position">Adviser</div>
-                            <div class="member-text">Over 20 years experience in entertainment/sports and technology sectors and launched the augmented and virtual reality company Magnify World in 2014 and Sports innovation company Arival. Worked for Warner and Sony entertainment for 12 years and then founded the sports mobile company Txtstation (interactive TV mobile marketing company) and raised over 6 million in venture capital.</div>
+                            <div class="member-text">엔터테인먼트 / 스포츠 및 기술 부문에서 20 년 이상의 경험을 쌓았으며, 증강현실 및 가상현실 회사 Magnify World(2014년)와 스포츠 혁신기업 Arival을 런칭했습니다. Warner ony Entertainment에서 12 년간 일한 후 스포츠모바일 회사인 Txtstation (대화형 TV 모바일 마케팅 회사)을 설립하고 600 만 달러 이상의 벤처자금을 모금하였습니다.</div>
                         </div>
                     </div>
                 
