--- a/ja/registration.html
+++ b/ja/registration.html
@@ -323,16 +323,20 @@
 
                         <div class="form-row mb-4">
                             <div class="col-lg-6 mb-4 mb-lg-0">
-                                <input type="email" class="form-control" placeholder="Введите ваш E-mail">
+                                <input type="email" class="form-control" placeholder="Введите ваш E-mail" required>
                             </div>
-                            <div class="col-lg-6">
-                                <input type="password" class="form-control" placeholder="Пароль">
+                            <div class="col-lg-6 mb-4 mb-lg-0">
+                                <input type="tel" class="form-control" placeholder="Телефон" required>
                             </div>
+                            
                         </div>
 
                         <div class="form-row mb-4">
-                            <div class="col-lg-6 mb-4 mb-lg-0">
-                                <input type="tel" class="form-control" placeholder="Телефон">
+                            <div class="col-lg-6">
+                                <input type="password" class="form-control" placeholder="Пароль" required>
+                            </div>
+                            <div class="col-lg-6">
+                                <input type="password" class="form-control" placeholder="Повторите Пароль" required>
                             </div>
                         </div>
 
