refister US block

--- a/ru/account-2fa.html
+++ b/ru/account-2fa.html
@@ -311,8 +311,8 @@
                             <li class="list-item"><a href="account-balance.html" class="menu-link">Баланс</a></li>
                             <li class="list-item"><a href="account-profile.html" class="menu-link">Профиль</a></li>
                             <li class="list-item active"><a href="account-2fa.html" class="menu-link">2FA</a></li>
-                            <li class="list-item list-item--br"><a href="account-personal.html" class="menu-link">Персональные данные</a></li>
-                            <li class="list-item list-item--br"><a href="account-verification.html" class="menu-link">Верификация</a></li>
+                            <!-- <li class="list-item list-item--br"><a href="account-personal.html" class="menu-link">Персональные данные</a></li>
+                            <li class="list-item list-item--br"><a href="account-verification.html" class="menu-link">Верификация</a></li> -->
 
                         </ul>
 
