--- a/cn/index.html
+++ b/cn/index.html
@@ -350,8 +350,7 @@
 						</div>
 					</div>
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-fluid btn-buy timerElHide">购买代币</a>
-						<button type="button" class="btn btn-fluid btn-buy d-none timerElShow" data-toggle="modal" data-target="#whiteListModal">Join the White List</button>
+						<button type="button" class="btn btn-fluid btn-buy" data-toggle="modal" data-target="#whiteListModal">Join the White List</button>
 					</div>
 
 				</div>
