--- a/en/index.html
+++ b/en/index.html
@@ -350,8 +350,7 @@
 						</div>
 					</div>
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-fluid btn-buy timerElHide">BUY TOKEN</a>
-						<button type="button" class="btn btn-fluid btn-buy d-none timerElShow" data-toggle="modal" data-target="#whiteListModal">JOIN THE WHITE LIST</button>
+						<button type="button" class="btn btn-fluid btn-buy" data-toggle="modal" data-target="#whiteListModal">JOIN THE WHITE LIST</button>
 					</div>
 
 				</div>
