--- a/ru/index.html
+++ b/ru/index.html
@@ -348,8 +348,7 @@
 						</div>
 					</div>
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-fluid btn-buy timerElHide">КУПИТЬ ТОКЕНЫ</a>
-						<button type="button" class="btn btn-fluid btn-buy d-none timerElShow" data-toggle="modal" data-target="#whiteListModal">JOIN WHITE LIST</button>
+						<button type="button" class="btn btn-fluid btn-buy" data-toggle="modal" data-target="#whiteListModal">JOIN WHITE LIST</button>
 					</div>
 
 				</div>
