roadmap slider fix

--- a/ru/index.html
+++ b/ru/index.html
@@ -978,8 +978,8 @@
 			<div class="slider-controls d-none d-lg-block">
 				<div class="container">
 					<div class="d-flex justify-content-around">
-						<a href="" data-element="slider-arrow" data-event="prev" class="slider-arrow"><img src="/en/img/arrow-left.png?v=1.1.10a" alt=""></a>
-						<a href="" data-element="slider-arrow" data-event="next" class="slider-arrow"><img src="/en/img/arrow-right.png?v=1.1.10a" alt=""></a>
+						<button data-element="slider-arrow" data-event="prev" class="slider-arrow"><img src="/en/img/arrow-left.png?v=1.1.10a" alt=""></button>
+						<button data-element="slider-arrow" data-event="next" class="slider-arrow"><img src="/en/img/arrow-right.png?v=1.1.10a" alt=""></button>
 					</div>
 				</div>
 			</div>
