--- a/ru/index.html
+++ b/ru/index.html
@@ -862,7 +862,7 @@
                 </div>
 
                 <div class="col-7 text-left">
-                    <img src="/en/img/graph-2.png?v=1.1.20a" alt="" class="img-responsive">
+                    <img src="/en/img/diagram_2.svg?v=1.1.20a" alt="" class="img-responsive">
                 </div>
 
                 <div class="col-5 text-right d-flex justify-content-between flex-column">
