--- a/cn/registration.html
+++ b/cn/registration.html
@@ -306,7 +306,11 @@
 
                     <form class="needs-validation" novalidate>
                         
-                        <div class="invalid-feedback text-center text-md mb-3"><span class="mark">Заполните обязательные поля</span></div>
+                        <div class="invalid-feedback text-center text-md mb-3">
+                            <span class="mark">
+                                填写必填字段
+                            </span>
+                        </div>
 
                         <div class="alert alert-danger mb-3 d-none">
                             UNFORTUNATELY WE SHOULD CLOSE THIS SALE FOR US CITIZENS.
