--- a/ko/registration.html
+++ b/ko/registration.html
@@ -306,7 +306,11 @@
 
                     <form class="needs-validation" novalidate>
                         
-                        <div class="invalid-feedback text-center text-md mb-3"><span class="mark">Заполните обязательные поля</span></div>
+                        <div class="invalid-feedback text-center text-md mb-3">
+                            <span class="mark">
+                                필수입력란을 기입해주세요
+                            </span>
+                        </div>
 
                         <div class="alert alert-danger mb-3 d-none">
                             UNFORTUNATELY WE SHOULD CLOSE THIS SALE FOR US CITIZENS.
