--- a/ko/registration.html
+++ b/ko/registration.html
@@ -304,6 +304,12 @@
 
                 <div class="offset-lg-2-5 col-lg-3-5">
 
+                    <div class="invalid-feedback text-center text-md mb-3">
+                        <span class="mark">
+                            필수입력란을 기입해주세요
+                        </span>
+                    </div>
+
                     <form class="needs-validation" novalidate>
                         
                         <div class="invalid-feedback text-center text-md mb-3">
