--- a/ru/index.html
+++ b/ru/index.html
@@ -332,7 +332,7 @@
 					</div>
 
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-fluid btn-buy">Получи бонус на Token Sale</a>
+						<a href="/users/sign_up?lang=ru" class="btn btn-fluid btn-buy">Получи бонус на Token Sale</a>
 						
 					</div>
 
