--- a/cn/index.html
+++ b/cn/index.html
@@ -334,7 +334,7 @@
 					</div>
 
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-fluid btn-buy">参加出售收到红利</a>
+						<a href="/users/sign_up?lang=zh-CN" class="btn btn-fluid btn-buy">参加出售收到红利</a>
 						
 					</div>
 
