--- a/en/index.html
+++ b/en/index.html
@@ -334,7 +334,7 @@
 					</div>
 
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-fluid btn-buy">Get BONUS on Token Sale</a>
+						<a href="/users/sign_up?lang=en" class="btn btn-fluid btn-buy">Get BONUS on Token Sale</a>
 						
 					</div>
 
