--- a/ja/index.html
+++ b/ja/index.html
@@ -334,7 +334,7 @@
 					</div>
 
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-fluid btn-buy">トークンセールにてボーナスを得てください</a>
+						<a href="/users/sign_up?lang=ja" class="btn btn-fluid btn-buy">トークンセールにてボーナスを得てください</a>
 						
 					</div>
 
