--- a/ko/index.html
+++ b/ko/index.html
@@ -334,7 +334,7 @@
 					</div>
 
 					<div class="col-xl-7 mb-xl-0 mb-3">
-						<a href="/users/sign_up" class="btn btn-fluid btn-buy">토큰세일 보너스를 받으세요</a>
+						<a href="/users/sign_up?lang=ko" class="btn btn-fluid btn-buy">토큰세일 보너스를 받으세요</a>
 						
 					</div>
 
