--- a/ru/docs.html
+++ b/ru/docs.html
@@ -285,8 +285,8 @@
                     </ul>
 
     </div>
-</nav>        <div class="section-rounded section-middle--first">
-    <div class="section-round section-round-bottom section-team-bg"></div>
+</nav>        <div class="section-rounded">
+    <div class="section-round section-round-full section-team-bg"></div>
     
     <div class="section-content text-center section-docs">
         <div class="container">
