--- a/ru/blog.html
+++ b/ru/blog.html
@@ -287,7 +287,7 @@
     </div>
 </nav>        <div class="section section-rounded">
 
-    <div class="section-round section-round-top section-blog"></div>
+    <div class="section-round section-round-full section-blog"></div>
     
     <div class="section-content text-center">
 
