--- a/cn/index.html
+++ b/cn/index.html
@@ -1733,6 +1733,18 @@
                         <img src="/en/img/docs/VR_WP_ENG-1.jpg?v=1.1.35" alt="">
                     </a>
                     <p class="doc-title">简报</p>
+                </div> 
+                <div class="doc-item">
+                    <a href="https://s3.eu-west-2.amazonaws.com/viarium/Business_model/VR_BM_ch.pdf" target="_blank" class="doc-link">
+                        <img src="/en/img/docs/Business_model.jpg?v=1.1.35" alt="">
+                    </a>
+                    <p class="doc-title">Business Model</p>
+                </div> 
+                <div class="doc-item">
+                    <a href="https://s3.eu-west-2.amazonaws.com/viarium/Concept/VR_UC_ch.pdf" target="_blank" class="doc-link">
+                        <img src="/en/img/docs/Concept.jpg?v=1.1.35" alt="">
+                    </a>
+                    <p class="doc-title">Concept</p>
                 </div>        
             </div>
         </div>
